[workspace]
members = [
    "crates/pit-basic",
    "crates/pit-c",
    "crates/pit-patch",
    "crates/pit-patch-core",
    "crates/pit-patch-direct",
    "crates/pit-rust-externref",
    "crates/pit-rust-generator",
    "crates/pit-rust-guest",
    "crates/pit-rust-host-lib",
    "crates/pit-teavm",
    "crates/tpit-rt",
    "crates/pit-cli",
    "crates/pit-rust-host",
    "crates/pit-wit-bridge", "crates/pit-rust-host-core",
]
resolver = "2"

# "pit-core","pit-rust-host","pit-wit-bridge", "pit-cli",

[workspace.package]
license = "CC0-1.0"
description = "Portal Interface Types"
version = "0.5.0-alpha.1"

[workspace.dependencies]
portal-pc-waffle = {version="^0.6.0-alpha.1", git = "httpsd://github.com/portal-co/waffle-.git"}
# waffle-ast = "0.4"
pit-core = { version = "^0.4.2", git = "https://github.com/portal-co/pit-core.git" }
instability = "0.3.7"

tpit-rt = { version = "0.5.0-alpha.1", path = "crates/tpit-rt" }
pit-patch = { version = "0.5.0-alpha.1", path = "crates/pit-patch" }
pit-patch-core = { version = "0.5.0-alpha.1", path = "crates/pit-patch-core" }
pit-patch-direct = { version = "0.5.0-alpha.1", path = "crates/pit-patch-direct" }
wasmparser = "0.241"
wasm-encoder = "0.241"
pit-rust-guest = { version = "0.5.0-alpha.1", path = "crates/pit-rust-guest" }
pit-teavm = { version = "0.5.0-alpha.1", path = "crates/pit-teavm" }
pit-rust-host-core = {version = "0.5.0-alpha.1",path = "crates/pit-rust-host-core"}
pit-c = { version = "0.5.0-alpha.1", path = "crates/pit-c" }
ic-stable-structures = { version = "0.6.5", default-features = false}

wasm_runtime_layer = "^0.6"