[package]
name = "pit-basic"
version = "0.3.2"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

[dependencies]
externref = "0.2.0"
ic-stable-structures = { version = "0.6.5", optional = true }
tpit-rt = { version = "0.3.0", path = "../tpit-rt" }

[features]
host=[]
host-ic=["host","ic-stable-structures"]
ic-stable-structures = ["dep:ic-stable-structures"]
