[package]
name = "pit-cli"
version = "0.2.0"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

[dependencies]
anyhow = "1.0.86"
pit-core = { version = "0.2.0", path = "../pit-core" }
pit-patch = { version = "0.2.0", path = "../pit-patch" }
portal-pc-waffle.workspace = true
