[package]
name = "pit-core"
version = "0.2.4"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.18"
hex = "0.4.3"
nom = "7.1.3"
sha3 = "0.10.8"
