[package]
name = "pit-patch"
version = "0.2.1"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
nom = "7.1.3"
pit-core = { version = "0.2.0", path = "../pit-core" }
portal-pc-waffle.workspace = true
sha3 = "0.10.8"
waffle-ast.workspace = true
