[package]
name = "pit-patch"
version = "0.3.2"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types for WebAssembly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
nom = "^8"
pit-core.workspace = true
portal-pc-waffle = { workspace = true, features = ["copying"] }
sha3 = "0.10.8"
# waffle-ast.workspace = true
