[package]
name = "pit-rust-generator"
version = "0.1.1"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

[dependencies]
anyhow = "1.0.86"
nom = "7.1.3"
pit-core = { version = "0.1.0", path = "../pit-core" }
pit-rust-guest = { version = "0.1.0", path = "../pit-rust-guest" }
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
