[package]
name = "pit-rust-host"
version = "0.3.2"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
pit-core = { version = "0.3.0", path = "../pit-core" }
pit-rust-guest = { version = "0.3.0", path = "../pit-rust-guest" }
proc-macro2 = "1.0.85"
quasiquote = "0.1.1"
quote = "1.0.36"
syn = "2.0.66"
