[package]
name = "pit-wit-bridge"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
nonempty = "0.10.0"
pit-core = { version = "0.2.0", path = "../pit-core" }
pit-patch = { version = "0.2.0", path = "../pit-patch" }
portal-pc-waffle.workspace = true
wasmtime-environ = { version = "18.0.1", features = ["component-model"] }
wit-bindgen-core = "0.34.0"
wit-component = "0.219.1"
