[package]
name = "pit-wit-wasm-bridge"
version = "0.3.2"
edition = "2021"
license = "CC0-1.0"
description = "Portal Interface Types WIT bridge"

[dependencies]
anyhow = "1.0.93"
nonempty = "0.10.0"
nom = "^8"
pit-core.workspace = true
wit-bindgen-core = "0.34.0"

portal-pc-waffle.workspace = true
pit-patch = { version = "^0.4.0", path = "../pit-patch" }
