[package]
name = "pit-basic"
version = "0.4.0"
edition = "2021"
license.workspace = true # = "CC0-1.0"
description.workspace = true # = "Portal Interface Types for WebAssembly"

[dependencies]
externref = "0.2.0"
ic-stable-structures = { version = "0.6.5", optional = true }
tpit-rt = { version = "0.4.0", path = "../tpit-rt" }

[features]
host=[]
host-ic=["host","ic-stable-structures"]
ic-stable-structures = ["dep:ic-stable-structures"]
