[package]
name = "pit-basic"
version.workspace = true
edition = "2021"
license.workspace = true # = "CC0-1.0"
description.workspace = true # = "Portal Interface Types for WebAssembly"

[dependencies]
externref = "0.2.0"
ic-stable-structures = { workspace = true, optional = true }
tpit-rt.workspace = true

[features]
host=[]
host-ic=["host","ic-stable-structures"]
ic-stable-structures = ["dep:ic-stable-structures"]
