[package]
name = "pit-cli"
version.workspace = true
edition = "2021"
license.workspace = true # = "CC0-1.0"
description.workspace = true # = "Portal Interface Types for WebAssembly"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
pit-c.workspace = true
nom = "^8"
pit-core.workspace = true
portal-pc-waffle = { workspace = true, features = ["copying"] }
pit-patch.workspace = true
pit-rust-guest.workspace = true
pit-teavm.workspace = true
prettyplease = "0.2.25"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"

[[bin]]
name = "pit"
path = "src/main.rs"
