[package]
name = "pit-patch-direct"
version.workspace = true
edition = "2021"
license.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
pit-core.workspace = true
pit-patch-core.workspace = true
sha3 = "0.10.8"
wasmparser = { workspace = true }
wasm-encoder = { workspace = true, features = ["wasmparser"] }
