[package]
name = "pit-rust-host-lib"
version = "0.4.0"
edition = "2021"
license.workspace = true # = "CC0-1.0"
description.workspace = true # = "Portal Interface Types for WebAssembly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
nom = "^8"
pit-core.workspace = true
wasm_runtime_layer = "^0.5"
