[package]
name = "pit-rust-host"
version = "0.3.2"
edition = "2021"
license.workspace = true # = "CC0-1.0"
description.workspace = true # = "Portal Interface Types for WebAssembly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
nom = "^8"
pit-core.workspace = true
# portal-pc-waffle.workspace = true
pit-rust-guest = { version = "0.4.0", path = "../pit-rust-guest" }
pit-rust-host-core = {version = "0.4.0",path = "../pit-rust-host-core"}
proc-macro2 = "1.0.85"
quasiquote = "0.1.1"
quote = "1.0.36"
syn = "2.0.66"
